--- a/project1_html_css/google_homepage/index.html
+++ b/project1_html_css/google_homepage/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<link href="styles/style.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 <title>Google</title>
 
 </head>
