google homepage update

--- a/project1_html_css/google_homepage/index.html
+++ b/project1_html_css/google_homepage/index.html
@@ -17,7 +17,7 @@
 		<li>
 			<a id="btnSignIn" href="*"><b>Sign in</b></a>
 		</li>
-		<li><a href="*"><img src="images/apps.png"></a></li>
+		<li><a href="*"><img src="apps.png"></a></li>
 		<li><a href="*">Images</a></li>
   		<li><a href="*">Gmail</a></li>
 	</ul>
@@ -27,7 +27,7 @@
 
 <center>
 	<div style="padding-top:175px">
-		<img src= "images/googlehp.png" title="Google" id="hplogo">
+		<img src= "googlehp.png" title="Google" id="hplogo">
 	</div>
 <br>
 
